# df-cdc

./: .gitignore  CDC MySQL to Hive Flow.json  CDC with HPE Data Fabric.json  CDC_Dashboard.ipynb  CDC_from_MySQL_v1.xml  CDC_from_MySQL_v2.xml  CDC_from_MySQL_v3.xml  CDC_from_MySQL_v4.xml  Dashboard_2M1KSJM36.zpln  Dockerfile  HiveDashboard_2M333SR9V.zpln  MANUAL-INSTALL.md  MySQL_to_Hive_with_CDC.xml  NiFi for CDC.md  NiFi_Flow-2.json  NiFi_Flow.json  README.md  avro.schema  create-demodb-tables.sql  create-demodb.sql  create-table.hiveql  db-start.sh  docker-compose-with-build.yaml  docker-compose.yaml  entrypoint.sh  hive-site.xml  mapr-start.sh  pyproject.toml  sample-queries.sql  sparkflows.md  ssl_truststore  update_users.py  users.py
mapr/: Dockerfile  create_iceberg_table.py  entrypoint.sh  hive-site.xml  ingest_to_iceberg.py  users.py
presto/: docker-compose.yaml  hive.properties
